--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -22,6 +22,7 @@
         android:id="@+id/activity_add_contact_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/image"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintTop_toBottomOf="@id/activity_add_contact_header"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,11 +83,13 @@
         android:gravity="center">
 
         <RadioButton
+            android:id="@+id/activity_add_contact_friend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/friend" />
 
         <RadioButton
+            android:id="@+id/activity_add_contact_family"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/family"
@@ -94,6 +97,7 @@
             android:layout_marginEnd="10dp"/>
 
         <RadioButton
+            android:id="@+id/activity_add_contact_classmate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/classmate"/>
@@ -102,6 +106,7 @@
     </RadioGroup>
 
     <Button
+        android:id="@+id/activity_add_contact_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
