Add_Activity add

--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -7,26 +7,18 @@
     android:layout_height="match_parent"
     tools:context=".AddContact">
 
-    <RelativeLayout
-        android:id="@+id/activity_add_contact_header"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/header">
 
-    </RelativeLayout>
 
     <ImageView
         android:id="@+id/activity_add_contact_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:contentDescription="@string/image"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintTop_toBottomOf="@id/activity_add_contact_header"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <EditText
         android:id="@+id/activity_add_contact_fullname"
@@ -71,6 +63,7 @@
         android:inputType="textEmailAddress"/>
 
     <RadioGroup
+        android:id="@+id/activity_add_contact_radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
