--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+
+
+    <Button
+        android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_gravity="end|bottom"
-        android:src="@drawable/ic_person_add_black_24dp"
-        android:contentDescription="@string/submit_button"
-        android:layout_margin="16dp" />
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Add"/>
+
+
 
 
 
