--- a/app/src/main/res/layout/recyclerview_contacts.xml
+++ b/app/src/main/res/layout/recyclerview_contacts.xml
@@ -10,7 +10,8 @@
         android:id="@+id/recyclerview_contacts_image"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:src="@drawable/ic_profile"/>
 
     <TextView
         android:id="@+id/recyclerview_contacts_name"
@@ -23,6 +24,8 @@
         android:layout_marginTop="10dp"
         android:padding="10dp"
         />
+
+
 
 
 </LinearLayout>
