--- a/app/src/main/res/layout/recyclerview_contacts.xml
+++ b/app/src/main/res/layout/recyclerview_contacts.xml
@@ -4,7 +4,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:id="@+id/recyclerview_contacts_linear_layout">
 
     <ImageView
         android:id="@+id/recyclerview_contacts_image"
