--- a/app/src/main/res/layout/activity_display_person.xml
+++ b/app/src/main/res/layout/activity_display_person.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,9 +11,9 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/display_imageView"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +24,7 @@
         android:id="@+id/table_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
+        app:layout_constraintTop_toBottomOf="@id/display_imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="30dp">
@@ -37,6 +38,7 @@
                 android:text="Name"
                 android:textSize="18sp"/>
             <TextView
+                android:id="@+id/display_name"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Shakeel Haider"
@@ -54,6 +56,7 @@
                 android:text="Phone"
                 android:textSize="18sp"/>
             <TextView
+                android:id="@+id/display_number"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="03460027852"
@@ -71,6 +74,7 @@
                 android:text="Email"
                 android:textSize="18sp"/>
             <TextView
+                android:id="@+id/display_email"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="shkhaider2015@gmail.com"
@@ -89,6 +93,7 @@
                 android:text="Category"
                 android:textSize="18sp"/>
             <TextView
+                android:id="@+id/display_category"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Family"
@@ -101,31 +106,22 @@
 
     </TableLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/display_update"
+        android:text="Update"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/table_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
+        app:layout_constraintBottom_toBottomOf="@id/display_call"
+        android:layout_marginBottom="60dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:background="@drawable/bgbtnupdate"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="Update"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:text="Delete"
-            android:layout_marginStart="20dp"/>
-
-    </LinearLayout>
 
     <Button
+        android:id="@+id/display_call"
         android:text="CALL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
