--- a/app/src/main/res/layout/recyclerview_contacts.xml
+++ b/app/src/main/res/layout/recyclerview_contacts.xml
@@ -5,26 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:id="@+id/recyclerview_contacts_linear_layout">
+    android:weightSum="10"
+    >
+
+    <LinearLayout
+        android:id="@+id/recyclerview_contacts_linear_layout"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="9">
+
+        <ImageView
+            android:id="@+id/recyclerview_contacts_image"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_profile"/>
+
+        <TextView
+            android:id="@+id/recyclerview_contacts_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/name"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            />
+
+    </LinearLayout>
+
+
 
     <ImageView
-        android:id="@+id/recyclerview_contacts_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_margin="5dp"
-        android:src="@drawable/ic_profile"/>
-
-    <TextView
-        android:id="@+id/recyclerview_contacts_name"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="@string/name"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        />
+        android:id="@+id/recyclerview_contacts_menu"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_margin="20dp"
+        android:src="@drawable/ic_menu_three_dots_not_filled"
+        android:layout_weight="1"/>
 
 
 
