--- a/app/src/main/res/layout/recyclerview_contacts.xml
+++ b/app/src/main/res/layout/recyclerview_contacts.xml
@@ -14,12 +14,18 @@
         android:layout_height="match_parent"
         android:layout_weight="9">
 
-        <ImageView
+<!--        <ImageView-->
+<!--            android:id="@+id/recyclerview_contacts_image"-->
+<!--            android:layout_width="70dp"-->
+<!--            android:layout_height="70dp"-->
+<!--            android:layout_margin="5dp"-->
+<!--            android:src="@drawable/ic_profile"/>-->
+        <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/recyclerview_contacts_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_margin="5dp"
-            android:src="@drawable/ic_profile"/>
+            android:src="@drawable/ic_profile"
+            android:layout_margin="5dp"/>
 
         <TextView
             android:id="@+id/recyclerview_contacts_name"
