--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -10,16 +10,16 @@
 
 
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/activity_add_contact_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:contentDescription="@string/image"
         android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_profile" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_profile"/>
 
     <EditText
         android:id="@+id/activity_add_contact_fullname"
@@ -33,7 +33,9 @@
         android:layout_marginEnd="25dp"
         android:autofillHints="@string/fullname"
         android:hint="@string/fullname"
-        android:inputType="textPersonName"/>
+        android:inputType="textPersonName"
+        android:drawableStart="@drawable/ic_but_name_24x24"
+        android:drawablePadding="10dp"/>
 
     <EditText
         android:id="@+id/activity_add_contact_phonenumber"
@@ -47,7 +49,9 @@
         android:layout_marginEnd="25dp"
         android:autofillHints="@string/phonenumber"
         android:hint="@string/phonenumber"
-        android:inputType="phone"/>
+        android:inputType="phone"
+        android:drawableStart="@drawable/ic_but_phone_24x24"
+        android:drawablePadding="10dp"/>
 
     <EditText
         android:id="@+id/activity_add_contact_email"
@@ -61,7 +65,9 @@
         android:layout_marginEnd="25dp"
         android:autofillHints="@string/email"
         android:hint="@string/email"
-        android:inputType="textEmailAddress"/>
+        android:inputType="textEmailAddress"
+        android:drawableStart="@drawable/ic_but_email_24x24"
+        android:drawablePadding="10dp"/>
 
     <RadioGroup
         android:id="@+id/activity_add_contact_radio_group"
