--- a/app/src/main/res/layout/activity_display_person.xml
+++ b/app/src/main/res/layout/activity_display_person.xml
@@ -8,17 +8,15 @@
     android:background="@drawable/background">
 
 
-
-
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/display_imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="100dp"
+        app:srcCompat="@drawable/ic_profile"/>
 
     <TableLayout
         android:id="@+id/table_layout"
@@ -32,47 +30,47 @@
         <TableRow
             android:layout_height="100dp"
             android:layout_width="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Name"
-                android:textSize="18sp"/>
+            <ImageView
+                android:contentDescription="@string/image"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_col_name"/>
             <TextView
                 android:id="@+id/display_name"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Shakeel Haider"
                 android:textSize="18sp"
-                android:layout_marginStart="15dp"/>
+                android:layout_marginStart="20dp"/>
 
         </TableRow>
         <TableRow
             android:layout_height="100dp"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Phone"
-                android:textSize="18sp"/>
+            <ImageView
+                android:contentDescription="@string/image"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_col_phone_number"/>
             <TextView
                 android:id="@+id/display_number"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="03460027852"
                 android:textSize="18sp"
-                android:layout_marginStart="15dp"/>
+                android:layout_marginStart="20dp"/>
 
         </TableRow>
         <TableRow
             android:layout_height="100dp"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Email"
-                android:textSize="18sp"/>
+            <ImageView
+                android:contentDescription="@string/image"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_col_email"/>
             <TextView
                 android:id="@+id/display_email"
                 android:layout_width="wrap_content"
@@ -80,25 +78,26 @@
                 android:text="shkhaider2015@gmail.com"
                 android:maxLines="2"
                 android:textSize="18sp"
-                android:layout_marginStart="15dp"/>
+                android:layout_marginStart="20dp"/>
 
         </TableRow>
         <TableRow
             android:layout_height="100dp"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Category"
-                android:textSize="18sp"/>
+            <ImageView
+                android:id="@+id/display_category_image"
+                android:contentDescription="@string/image"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_col_friend"/>
             <TextView
                 android:id="@+id/display_category"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Family"
                 android:textSize="18sp"
-                android:layout_marginStart="15dp"/>
+                android:layout_marginStart="20dp"/>
 
         </TableRow>
 
