--- a/app/src/main/res/layout/activity_display_person.xml
+++ b/app/src/main/res/layout/activity_display_person.xml
@@ -12,6 +12,7 @@
         android:id="@+id/display_imageView"
         android:layout_width="180dp"
         android:layout_height="180dp"
+        app:civ_border_color="@color/header"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +91,7 @@
                 android:contentDescription="@string/image"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_col_friend"/>
+                android:src="@drawable/ic_col_family"/>
             <TextView
                 android:id="@+id/display_category"
                 android:layout_width="wrap_content"
