--- a/app/src/main/res/layout/recyclerview_contacts.xml
+++ b/app/src/main/res/layout/recyclerview_contacts.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:weightSum="10"
-    >
+    android:weightSum="10">
 
     <LinearLayout
         android:id="@+id/recyclerview_contacts_linear_layout"
@@ -14,17 +13,12 @@
         android:layout_height="match_parent"
         android:layout_weight="9">
 
-<!--        <ImageView-->
-<!--            android:id="@+id/recyclerview_contacts_image"-->
-<!--            android:layout_width="70dp"-->
-<!--            android:layout_height="70dp"-->
-<!--            android:layout_margin="5dp"-->
-<!--            android:src="@drawable/ic_profile"/>-->
         <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/recyclerview_contacts_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/ic_profile"
+            app:civ_border_color="@color/header"
             android:layout_margin="5dp"/>
 
         <TextView
