--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#3FF80C</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#20EEA4</color>
+    <color name="colorAccent">#20EEA4</color>
 
 
 
 
+    <color name="backup">#3FF80C</color>
     <color name="shadow">#EBCCF3</color>
-    <color name="header">#3FF80C</color>
+    <color name="image_shadow">#9B9999</color>
+    <color name="header">#20EEA4</color>
 </resources>
