--- a/app/src/main/res/drawable/bgbtn.xml
+++ b/app/src/main/res/drawable/bgbtn.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="#3FF80C"/>
+        android:color="@color/default_theme_color"/>
     <corners
         android:radius="200dp"/>
 
