--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -15,7 +15,7 @@
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:contentDescription="@string/image"
-        app:civ_border_color="@color/header"
+        app:civ_border_color="@color/default_theme_color"
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
