--- a/app/src/main/res/layout/activity_update_person.xml
+++ b/app/src/main/res/layout/activity_update_person.xml
@@ -14,6 +14,7 @@
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:contentDescription="@string/image"
+        app:civ_border_color="@color/default_theme_color"
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
