--- a/app/src/main/res/layout/recyclerview_contacts.xml
+++ b/app/src/main/res/layout/recyclerview_contacts.xml
@@ -18,14 +18,14 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:src="@drawable/ic_profile"
-            app:civ_border_color="@color/header"
+            app:civ_border_color="@color/default_theme_color"
             android:layout_margin="5dp"/>
 
         <TextView
             android:id="@+id/recyclerview_contacts_name"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="@string/name"
+            android:text="@string/fullname"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginStart="20dp"
@@ -42,6 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_margin="20dp"
+        android:contentDescription="@string/image"
         android:src="@drawable/ic_menu_three_dots_not_filled"
         android:layout_weight="1"/>
 
